@@ -81,3 +81,7 @@ end
 When(/^I select an option using the value "([^"]*)"$/) do |value|
   @page.select_list_id_element.select_value(value)
 end
+
+Then(/^the selected option should have a value of "([^"]*)"$/) do |value|
+  expect(@page.select_list_id_element.selected_values[0]).to eql value
+end
