@@ -30,10 +30,16 @@ module Druid
       end
 
       #
-      # @return [Array<sTRING>] An array of strings representing the text value of the currently selected options.
+      # @return [Array<String>] An array of strings representing the text of the currently selected options.
       #
       def selected_options
         element.selected_options.map { |e| e.text }.compact
+      end
+
+      #
+      # @return [Array<String>] An array of strings representing the value of the currently selected options.
+      def selected_values
+        element.selected_options.map { |e| e.value }.compact
       end
 
       #
