@@ -1,3 +1,6 @@
+=== 2017-01-03
+* Enhancement
+  * Added selected_values method to SelectList to get values of all selected elements
 === 2016-12-31
 * Enhancement
   * Added method to get the id of an Element
